link use default target

--- a/layouts/shortcodes/link.html
+++ b/layouts/shortcodes/link.html
@@ -4,7 +4,7 @@
 {{- $page := .Site.GetPage $file -}}
 
 {{- $text := .Get "text" | default $page.Params.title | default $url -}}
-{{- $target := .Get "target" | default "_blank" -}}
+{{- $target := .Get "target" | default "" -}}
 {{- $class := .Get "class" -}}
 
 {{- if hasPrefix $url "/" -}}
